--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,132 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: "Glit";
+  src: url("/fonts/Glit.ttf");
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face {
+  font-family: "Love";
+  src: url("/fonts/Love.ttf");
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@font-face {
+  font-family: "Shine";
+  src: url("/fonts/Shine.ttf");
+}
+
+@font-face {
+  font-family: "Dogica";
+  src: url("/fonts/dogica.ttf");
+}
+
+@font-face {
+  font-family: "Vibes";
+  src: url("/fonts/Vibes.ttf");
+}
+
+@theme {
+  --font-glit: "Glit";
+  --font-shine: "Shine";
+  --font-vibes: "Vibes";
+  --font-love: "Love";
+  --font-dog: "Dogica";
+
+  --font-xxs: 0.6rem;
+}
+
+@layer utilities {
+  .font-glit {
+    font-family: var(--font-glit);
+  }
+
+  .text-xxs {
+    font-size: var(--font-xxs);
+  }
+
+  .font-dog {
+    font-family: var(--font-dog);
+  }
+
+  .font-love {
+    font-family: var(--font-love);
+  }
+
+  .font-shine {
+    font-family: var(--font-shine);
+  }
+
+  .font-vibes {
+    font-family: var(--font-vibes);
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+html {
+  background-color: black;
+  overflow-x: hidden;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
+html::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+html::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+html::-webkit-scrollbar-track:active {
+  background-color: transparent !important;
+  opacity: 0;
+}
+
+html::-webkit-scrollbar-thumb:active {
+  background-color: transparent !important;
+}
+
+div::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+div::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+div::-webkit-scrollbar-track:active {
+  background-color: transparent !important;
+  opacity: 0;
+}
+
+div::-webkit-scrollbar-thumb:active {
+  background-color: transparent !important;
 }
